--- a/opentelemetry-jaeger/Cargo.toml
+++ b/opentelemetry-jaeger/Cargo.toml
@@ -35,7 +35,8 @@ pin-project = { version = "1.0", optional = true }
 reqwest = { version = "0.11", default-features = false, optional = true }
 surf = { version = "2.0", default-features = false, optional = true }
 thiserror = "1.0"
-thrift = "0.15"
+# thrift = "0.17" -- not yet released
+thrift =  { git = "https://github.com/mobilecoinofficial/thrift.git", rev = "9caf65384c5ec50b4988e2fb07b984f275785123" }
 tokio = { version = "1.0", features = ["net", "sync"], optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
 wasm-bindgen-futures = { version = "0.4.18", optional = true }
